# pipelinewise-tap-postgres

./: .gitignore  .noserc  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose-postgres.yml  docker-compose.yml  pyproject.toml  setup.py
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md
.github/workflows/: build.yaml  ci.yaml
tap_postgres/: __init__.py  db.py  discovery_utils.py  stream_utils.py
tap_postgres/sync_strategies/: full_table.py  incremental.py  logical_replication.py  time_based.py
tests/: test_clear_state_on_replication_change.py  test_db.py  test_discovery.py  test_full_table_interruption.py  test_incremental.py  test_logical_replication.py  test_streams_utils.py  test_time_based_replication.py  test_unsupported_pk.py  utils.py
tests/integration/: env  test_discovery.py  test_logical_replication.py  test_streams_utils.py  test_unsupported_pk.py
tests/unit/: test_db.py  test_incremental.py
